--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vitest": "^0.23.4"
+  },
+  "volta": {
+    "node": "16.18.1",
+    "yarn": "3.3.1"
   }
 }
