--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "next": "13.0.0",
+    "next": "14.1.0",
     "next-superjson": "^0.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "superjson": "^1.9.1"
   },
   "devDependencies": {
@@ -40,15 +40,15 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
-    "@types/node": "^18.6.4",
-    "@types/react": "18.0.16",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^2.1.0",
     "@vitest/ui": "^0.23.4",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.4",
@@ -59,11 +59,11 @@
     "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
+    "typescript": "^5",
     "vitest": "^0.23.4"
   },
   "volta": {
-    "node": "16.18.1",
+    "node": "20.11.1",
     "yarn": "3.3.1"
   }
 }
