chore(deps): upgrade storybook to work with next

--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "db:import": "docker exec -i postgres-db /usr/bin/pg_restore -U postgres -d test < backup.sql",
     "db:copy": "docker cp backup.sql postgres-db:/home/backup.sql",
     "db:backup": "docker exec postgres-db /usr/bin/pg_dump -U postgres test -Fc --no-owner > backup.sql",
-    "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook",
     "tw": "tailwind-config-viewer -o",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "next": "14.1.0",
@@ -31,14 +31,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/react": "^6.5.12",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.0",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/builder-webpack5": "^7.6.17",
+    "@storybook/nextjs": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/test": "^7.6.17",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -55,11 +58,12 @@
     "jsdom": "^20.0.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "storybook-addon-next": "^1.6.9",
+    "storybook": "^7.6.17",
     "tailwind-config-viewer": "^1.7.2",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^5",
+    "vite": "^5.1.4",
     "vitest": "^0.23.4"
   },
   "volta": {
