--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # next js makes this available client side
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3000/api
+NEXT_PUBLIC_VERCEL_URL=http://localhost:3000
